--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "method-override": "^1.0.0",
     "express-session": "^1.0.0"
   },
-  "devDependencies": {
-    "forever": "^0.15.3"
-  }
+  "engines": {
+    "node": "^3.5.0",
+    "yarn": "1.3.2"
+  },
+  "scripts": {
+    "lint": "(cd client && yarn lint); (cd server && yarn lint)",
+    "flow-stop": "(cd client && yarn flow stop); (cd server && yarn flow stop)",
+    "start": "node index.js",
+    "build": "(cd client && yarn build); (cd server && yarn build)",
+    "postinstall": "yarn install --cwd server --production=false && yarn install --cwd client --production=false",
+    "heroku-postbuild": "(cd server && yarn build); (cd client && yarn build)"
+}
 }
