--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express-session": "^1.0.0"
   },
   "engines": {
-    "node": "^3.5.0",
+    "node": "4.8.2",
     "yarn": "1.3.2"
   },
   "scripts": {
