--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "yarn": "1.3.2"
   },
   "scripts": {
-    "lint": "(cd client && yarn lint); (cd server && yarn lint)",
-    "flow-stop": "(cd client && yarn flow stop); (cd server && yarn flow stop)",
+    "lint": "yarn lint",
+    "flow-stop": "yarn flow stop",
     "start": "node index.js",
-    "build": "(cd client && yarn build); (cd server && yarn build)",
-    "postinstall": "yarn install --cwd server --production=false && yarn install --cwd client --production=false",
-    "heroku-postbuild": "(cd server && yarn build); (cd client && yarn build)"
+    "build": "yarn build",
+    "postinstall": "yarn install --production=false",
+    "heroku-postbuild": "yarn build"
 }
 }
