--- a/package.json
+++ b/package.json
@@ -19,15 +19,9 @@
     "express-session": "^1.0.0"
   },
   "engines": {
-    "node": "4.8.2",
-    "yarn": "1.3.2"
+    "node": "4.8.2"
   },
   "scripts": {
-    "lint": "yarn lint",
-    "flow-stop": "yarn flow stop",
-    "start": "node index.js",
-    "build": "yarn build",
-    "postinstall": "yarn install --production=false",
-    "heroku-postbuild": "yarn build"
+    "start": "node index.js"
 }
 }
