--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "passport-facebook": "^1.0.3",
     "passport-google": "^0.3.0",
     "passport-local": "^1.0.0",
+    "passport-totp": "0.0.2",
     "passport-twitter": "^1.0.2",
     "q": "^1.0.1",
     "qrcode": "^1.2.0",
