--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "passport": "^0.2.0",
     "passport-facebook": "^1.0.3",
     "passport-google": "^0.3.0",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-totp": "0.0.2",
     "passport-twitter": "^1.0.2",
@@ -26,7 +27,7 @@
     "thirty-two": "^1.0.2"
   },
   "engines": {
-    "node": "4.8.2"
+    "node": "9.8.0"
   },
   "scripts": {
     "start": "node index.js"
