--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.0.0",
     "method-override": "^1.0.0",
     "mongodb": "^2.2.11",
+    "mongoose": "^5.0.10",
     "morgan": "^1.8.0",
     "passport": "^0.2.0",
     "passport-facebook": "^1.0.3",
