Added ability to recover pictures from facebook (still buggy) But the variables changed in request (passport: 180) revert back to their previous value after exiting the function

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport-totp": "0.0.2",
     "passport-twitter": "^1.0.2",
     "q": "^1.0.1",
+    "request": "^2.85.0",
     "sprintf": "^0.1.5",
     "thirty-two": "^1.0.2",
     "xmlhttprequest": "^1.8.0"
