--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^3.5.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.0.0",
+    "gravatar": "^1.6.0",
     "method-override": "^1.0.0",
     "mongodb": "^2.2.11",
     "mongoose": "^5.0.10",
