--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^2.2.11",
     "mongoose": "^5.0.10",
     "morgan": "^1.8.0",
+    "nodemailer": "^4.6.3",
     "passport": "^0.2.0",
     "passport-facebook": "^1.0.3",
     "passport-google-oauth": "^1.0.0",
