--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.0.0",
     "gravatar": "^1.6.0",
+    "jsonwebtoken": "^8.2.0",
     "method-override": "^1.0.0",
     "mongodb": "^2.2.11",
     "mongoose": "^5.0.10",
