--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bcryptjs": "^0.7.12",
     "body-parser": "^1.0.0",
     "cookie-parser": "^1.0.0",
+    "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "express": "^3.5.0",
     "express-handlebars": "^3.0.0",
